force-app/main/default/objects/Sample_Order_Line__c/Sample_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Sample Order Line</label>
    <nameField>
        <displayFormat>Sample Line-{0000}</displayFormat>
        <label>Sample Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>