force-app/main/default/objects/Sample_Order_Line__c/fields/ProductSample__c.field-meta.xml
<CustomField>
    <fullName>ProductSample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sample Order Lines</relationshipLabel>
    <relationshipName>Sample_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>