force-app/main/default/objects/Sample_Order_Line__c/fields/Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order__c</fullName>
    <label>Sample Order</label>
    <referenceTo>Sample_Order__c</referenceTo>
    <relationshipLabel>Sample Order Lines</relationshipLabel>
    <relationshipName>Sample_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>