force-app/main/default/objects/Sample_Order_Line__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meter (m)</fullName>
            </value>
            <value>
                <fullName>Centimetre (cm)</fullName>
            </value>
            <value>
                <fullName>NOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>